--- a/.emacs.desktop
+++ b/.emacs.desktop
@@ -2,9 +2,9 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Wed Feb  8 16:18:24 2012
+;; Created Thu Feb 16 17:08:57 2012
 ;; Desktop file format version 206
-;; Emacs version 24.0.50.1
+;; Emacs version 24.0.93.1
 
 ;; Global section:
 (setq desktop-missing-file-warning nil)
@@ -17,12 +17,12 @@
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
 (desktop-create-buffer 206
-  "/Users/dannluciano/.emacs.d/init.el"
+  "/home/dannluciano/.emacs.d/init.el"
   "init.el"
   'emacs-lisp-mode
-  '(auto-fill-mode yas/minor-mode textmate-mode paredit-mode elisp-slime-nav-mode eldoc-mode hi-lock-mode)
-  3558
-  '(3534 nil)
+  '(auto-fill-mode yas/minor-mode eldoc-mode paredit-mode elisp-slime-nav-mode)
+  382
+  '(nil nil)
   nil
   nil
   '((buffer-file-coding-system . undecided-unix) (column-number-mode . t)))
